# robotic_arm

./: CMakeLists.txt  README.md  elbow.stl  package.xml  platformio.ini  shoulder.stl  top_base.stl
config/: config.rviz  joy_config.yaml  trajectory_controller.yaml  vel_controller.yaml
hardware/: stepper_system_hardware.cpp
hardware/include/robotic_arm/: CAN_Comms.hpp  Stepper.hpp  stepper_system_hardware.hpp  visibility_control.h
include/: CANbus.h  MotorController.h  StepperMotor.h  test.cpp
launch/: ik_vel.launch.py  kine.launch.py  rsp.launch.py  rviz_sim.launch.py  sim.launch.py  spawn_controllers.launch.py  vel_control.launch.py
launch/include/: rsp.launch.py  sim.launch.py  trajectory_controllers.launch.py  vel_controllers.launch.py
meshes/: bevel_gear.stl  claw_base.stl  claw_left.stl  diff_base.stl  pulley_out.stl  shoulder.stl  top_base_2.stl  wrist_bevel.stl  wrist_carrier.stl
realsense_yolo/: package.xml  setup.cfg  setup.py
realsense_yolo/launch/: realsense_yolo.launch.py
realsense_yolo/realsense_yolo/: yolo_detection_node.py
realsense_yolo/resource/: realsense_yolo
robo_arm_controller/: CMakeLists.txt  package.xml
robo_arm_controller/config/: ros2_controllers.yaml
robo_arm_controller/launch/: trajectory_controllers.launch.py  twist_joy.launch.py  vel_controllers.launch.py
robo_arm_description/: CMakeLists.txt  package.xml  robo_arm_description.xml
robo_arm_description/config/: config.rviz  initial_positions.yaml
robo_arm_description/hardware/: stepper_system_hardware.cpp
robo_arm_description/hardware/include/robo_arm/: Stepper.hpp  stepper_system_hardware.hpp  visibility_control.h
robo_arm_description/hardware/include/robotic_arm/: Stepper.hpp
robo_arm_description/launch/: gazebo_sim.launch.py  rsp.launch.py  rviz_sim.launch.py  sim.launch.py
robo_arm_description/meshes/: bottom_base.stl  claw_right.stl  forearm.stl
robo_arm_description/urdf/: camera.xacro  gazebo.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
robo_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robo_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_servo.yaml  moveit_task_execute.rviz  robo_arm.srdf  sensors_3d.yaml  sensors_3d_empty.yaml
robo_arm_moveit/launch/: demo.launch.py  detection_scene.launch.py  move_group.launch.py  moveit_rviz.launch.py  octomap_planning_scene.launch.py  perception.launch.py  perception_tracking.launch.py  pick_n_place.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  teleop.launch.py  warehouse_db.launch.py
robo_arm_moveit/src/: detection_scene_builder.cpp  static_pick_place.cpp
robo_arm_vision/: package.xml  setup.cfg  setup.py
robo_arm_vision/launch/: realsense_glove.launch.py  robo_arm_vision.launch.py  yolo_detection_3d.launch.py
robo_arm_vision/resource/: robo_arm_vision
robo_arm_vision/robo_arm_vision/: yolo_detection_3d_node.py  yolo_detection_node.py
robot_description/: bevel_pinion.stl  diff_base.stl  package.xml  pulley_in.stl
robot_description/launch/: rsp.launch.py
robot_description/meshes/: carrier.stl
robot_description/urdf/: robot.urdf.xacro  robot_core.xacro
robot_hardware/: CMakeLists.txt  package.xml  robot_hardware.xml
robot_hardware/include/robotic_arm_hardware/: CAN_Comms.hpp  Stepper.hpp  stepper_system_hardware.hpp
robot_hardware/src/: stepper_system_hardware.cpp
robot_kinematics/: CMakeLists.txt  package.xml
robotic_arm/: CMakeLists.txt  package.xml  robotic_arm.xml
robotic_arm/config/: ik_config.yaml  vel_controller.yaml
robotic_arm/launch/: gazebo_sim.launch.py
robotic_arm/launch/include/: sim.launch.py  trajectory_controllers.launch.py  twist_joy.launch.py
robotic_arm/meshes/: shoulder.stl
robotic_arm/urdf/: gazebo.xacro  robot.urdf.xacro  robot_core.urdf  robot_core.xacro
robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robotic_arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  moveit_servo.yaml  moveit_servo_config.rviz  robotic_arm.ros2_control.xacro  robotic_arm.srdf  robotic_arm.urdf.xacro  ros2_controllers.yaml
robotic_arm_moveit_config/launch/: pick_n_place.launch.py  teleop.launch.py
robotic_arm_moveit_config/src/: mtc_node.cpp  servo_keyboard_input.cpp  static_pick_place.cpp
src/: CANbus.cpp  StepperMotor.cpp  main.cpp  test.cpp
urdf/: diff_mech.xacro  robot.urdf.xacro  robot_core.urdf  robot_core.xacro  ros2_control.xacro  sim_control.xacro
